# opencv_work

./: .gitignore  README.md  common.h
ae_curve/: Makefile  aeCurve.cpp  aeCurve1.cpp
fourier_transformation/: Makefile  dft.cpp
gamma/: Makefile  albertGamma.cpp  gammaRatio.cpp  gammaTable.cpp  samGamma.cpp  test.cpp  willisGamma.cpp
histogram/: Makefile  calcHist_Demo.cpp  histogram.cpp
image_enhancement/: Makefile  image-enhancement.cpp
laplacian_sharpness/: Makefile  laplacian-sharpness.cpp
parse_tuning_parameters/: AE调试参数说明.md  Gamma调试参数说明.md  Makefile  aaa_calibration_map.c  aaa_calibration_map.h  main.c  mz_rcam_cali.json  parseCalibrationMap
raw_parser/: Makefile  raw-parser.cpp
raw_processing/: CMakeLists.txt  Makefile  color_space_conversion.h  main.cpp  raw_processing.cpp  raw_processing.h  willis_timer.h
raw_processing/bayer_domain/: bayer_buffer.cpp  bayer_buffer.h  bayer_noise_reduction.cpp  bayer_noise_reduction.h  color_demosaicing_interpolation.cpp  color_demosaicing_interpolation.h  noise_reduction.cpp  noise_reduction.h  white_balance.cpp  white_balance.h
raw_processing/bayer_domain/inc/: bayer_buffer.h  color_demosaicing_interpolation.h
raw_processing/rgb_domain/: color_correction.cpp  color_correction.h  color_space_conversion.cpp  color_space_conversion.h  gamma_correction.cpp  gamma_correction.h  rgb_analyzer.cpp  rgb_analyzer.h  yuv_processing.cpp  yuv_processing.h
raw_processing/util/: color_space_conversion.cpp  raw_processing.cpp  willis_timer.h
raw_processing/yuv_domain/: yuv_processing.cpp  yuv_processing.h
(+19 files in other folders)
